# gobbler

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: client.rs  consts.rs  daemon.rs  lib.rs  main.rs  shutdown.rs  signals.rs  wallpaper_changer.rs
