[package]
name = "gobbler"
description = "Simple wallpaper changer for X11 based standalone window managers. It requires a tool called 'feh' (https://feh.finalrewind.org/) to set wallpapers."
version = "0.1.0"
edition = "2021"
authors = ["Mikolaj Grzegorzek <mikolaj.grzegorzek@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "env"] }
lazy_static = "1.4.0"
shared_memory = "0.12.4"
unix-named-pipe = "0.2.0"
env_logger = "0.9.0"
log = "0.4.17"
bincode = "2.0.0-rc.2"
serde = { version = "1.0.147", features = ["derive"] }
scopeguard = "1.1.0"
serde_repr = "0.1.9"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "tokio-macros", "rt", "time", "signal", "sync"] }
queues = "1.1.0"
glob = "0.3.0"
signal-hook = "0.3.14"
daemonize = "0.4.1"
